src/snapshots/blog__snapshot@inside-rust__2020__01__10__cargo-in-2020.html.snap
---
source: src/lib.rs
expression: content
input_file: site/inside-rust/2020/01/10/cargo-in-2020.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Cargo in 2020 | Inside Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="Cargo in 2020 | Inside Rust Blog">
     <meta name="twitter:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="Cargo in 2020 | Inside Rust Blog" />
    <meta property="og:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../../images/favicon.svg">
    <link rel="manifest" href="../../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/inside-rust/feed.xml" title="Inside Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../../inside-rust/">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Inside Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="Cargo in 2020" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>Cargo in 2020</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">Jan. 10, 2020 &middot; Eric Huss
     on behalf of <a href="https://www.rust-lang.org/governance/teams/dev-tools#cargo">the Cargo team</a> 
    </div>

    <div class="post">
      <p>This post is an overview of the major projects the Cargo team is interested in
tackling in 2020.</p>
<p>It can be difficult to plan and predict around a volunteer-based open-source
project with limited resources. Instead of trying to present a wish list,
these are projects that already have a solid effort planned to push them
forward. That doesn't mean that we are not interested in other projects. We
have compiled a more detailed wish list at
<a href="https://github.com/rust-lang/cargo/projects/1">https://github.com/rust-lang/cargo/projects/1</a> that gives an outline of
things we would like to see, but are unlikely to have significant progress
this year.</p>
<p>If you are interested in helping, please let us know! We may not have time to
shepherd additional projects, but we may have time to give some amount of
feedback and review, particularly for well-motivated people who can do the
legwork of design and gathering a consensus.</p>
<h2><a href="#features" aria-hidden="true" class="anchor" id="features"></a>Features</h2>
<p><a href="https://doc.rust-lang.org/cargo/reference/manifest.html#the-features-section">Features</a> provide a way to express optional dependencies and conditional
compilation of code. Fixes and enhancements to Features are one of the
most requested things we hear. In the beginning of 2020, we plan to implement
a new feature resolver which will make it easier to make progress on
implementing and experimenting with new behavior. There is a wide variety of
different enhancements that we are looking at, which we hope to make
incremental progress on while retaining a full picture of the long-term
plan.</p>
<p>Initially we plan to address the issues of decoupling shared dependencies
built with different features. Currently, features are unified for all uses of
a dependency, even when it is not necessary. This causes problems when a
feature intended for one context is incompatible with another. This often
happens for packages which have conditional <code>no_std</code> support. This appears
with build-dependencies, dev-dependencies, target-specific dependencies, and
large workspaces, each of which have their unique challenges.</p>
<p>Beyond that, the following is a brief view of the other major enhancements we
are tracking for the future:</p>
<ul>
<li>Workspace feature selection and unification</li>
<li>Automatic features</li>
<li>Namespaced features</li>
<li>Mutually exclusive features</li>
<li>Private/unstable features</li>
<li>Profile and target default features</li>
<li>And working through some of the 50+ feature issues.</li>
</ul>
<p>There are some significant challenges around retaining backwards
compatibility, and being sensitive to increased build times. We hope that we
can address some of the major pain points while balancing those concerns.</p>
<h2><a href="#std-aware-cargo" aria-hidden="true" class="anchor" id="std-aware-cargo"></a>std aware Cargo</h2>
<p>The &quot;std aware Cargo&quot; project is to make Cargo aware of the Rust standard
library, and to build it from source instead of using the pre-built binaries
that ship with <code>rustc</code>. Some of the notable benefits are:</p>
<ul>
<li>Customizing the compile-time flags of the standard library, such as using
different optimizations, target-cpu, debug settings, etc.</li>
<li>Supporting cross-compiling to new targets which do not have official
distributions.</li>
<li>Paving the road for future enhancements, such as compiling with different
features, and using custom sources.</li>
</ul>
<p>A significant amount of work has already been finished in 2019 with the
<a href="https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#build-std"><code>-Zbuild-std</code></a> feature available on the nightly channel. There is still a
long road to bring it to a state where it can be stabilized. Work is being
tracked in the <a href="https://github.com/rust-lang/wg-cargo-std-aware/"><code>wg-cargo-std-aware</code> repo</a>, and anyone interested is
encouraged to leave feedback on the issue tracker.</p>
<h2><a href="#profiles" aria-hidden="true" class="anchor" id="profiles"></a>Profiles</h2>
<p><a href="https://doc.rust-lang.org/nightly/cargo/reference/profiles.html">Profiles</a> have received a significant amount of work in 2018 and 2019.
<a href="https://doc.rust-lang.org/nightly/cargo/reference/profiles.html#overrides">Overrides</a> are now stable (shipping in Rust 1.41). <a href="https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#custom-named-profiles">Custom named profiles</a>
are available on the nightly channel. In 2020 we hope to continue pushing
these enhancements forward. Some of the efforts we are working towards are:</p>
<ul>
<li>Stabilizing <a href="https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#config-profiles">config-based profiles</a>.</li>
<li>Stabilizing <a href="https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#custom-named-profiles">custom-named profiles</a>.</li>
<li>Implementing the <code>build</code> profile which can make it easier to define build-script settings.</li>
</ul>
<h2><a href="#ongoing-projects" aria-hidden="true" class="anchor" id="ongoing-projects"></a>Ongoing projects</h2>
<p>Some ongoing efforts don't have an end, and we intend to continue making
progress with them. Several new chapters have been added to the documentation,
and there is more to come. The JSON APIs are continually expanding with new
information making it easier to integrate tools and extract information. And
of course, trying to stay on top of bugs and issues!</p>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../../scripts/highlight.js"></script>
  </body>
</html>
